# grib2-converter

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  wfg4reader.php
converter/: converter.py  converter_type.py
converter/types/: WGF4.py
source_data_manager/: source_data_manager.py
