[tool.poetry]
name = "grib2-wfg4-converter"
version = "0.1.0"
description = ""
authors = ["Nikolai Evseev <evseevnn@gmail.com>"]
readme = "README.md"
packages = [{include = "grib2_wfg4_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.1"
environs = "^9.5.0"
aiorun = "^2023.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

